[package]
name = "backup_diff"
version = "0.1.0"
authors = ["Maksim Surkov <modbrin@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
walkdir = "2.3.1"
checksums = "0.6.0"
sha2 = "0.8.1"
multimap = "0.8.1"
log4rs = "0.12.0"
log = "0.4.8"
chrono = "0.4.11"
lazy_static = "1.4.0"
defer = "0.1.0"